superappservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: he
  labels:
    app: superapp
spec:
  selector:
    app: superapp
  ports:
    - port: 8090
      targetPort: 8080
